; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/taskmgr/extr_applpage.c_AppPageCleanup.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/taskmgr/extr_applpage.c_AppPageCleanup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i64, i32 }

@hApplicationPageListCtrl = common dso_local global i32 0, align 4
@LVIF_PARAM = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @AppPageCleanup() #0 {
  %1 = alloca i32, align 4
  %2 = alloca %struct.TYPE_4__, align 8
  %3 = alloca i64, align 8
  store i32 0, i32* %1, align 4
  br label %4

4:                                                ; preds = %22, %0
  %5 = load i32, i32* %1, align 4
  %6 = load i32, i32* @hApplicationPageListCtrl, align 4
  %7 = call i32 @ListView_GetItemCount(i32 %6)
  %8 = icmp slt i32 %5, %7
  br i1 %8, label %9, label %25

9:                                                ; preds = %4
  %10 = call i32 @memset(%struct.TYPE_4__* %2, i32 0, i32 24)
  %11 = load i32, i32* @LVIF_PARAM, align 4
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %2, i32 0, i32 2
  store i32 %11, i32* %12, align 8
  %13 = load i32, i32* %1, align 4
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %2, i32 0, i32 0
  store i32 %13, i32* %14, align 8
  %15 = load i32, i32* @hApplicationPageListCtrl, align 4
  %16 = call i32 @ListView_GetItem(i32 %15, %struct.TYPE_4__* %2)
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %2, i32 0, i32 1
  %18 = load i64, i64* %17, align 8
  store i64 %18, i64* %3, align 8
  %19 = call i32 (...) @GetProcessHeap()
  %20 = load i64, i64* %3, align 8
  %21 = call i32 @HeapFree(i32 %19, i32 0, i64 %20)
  br label %22

22:                                               ; preds = %9
  %23 = load i32, i32* %1, align 4
  %24 = add nsw i32 %23, 1
  store i32 %24, i32* %1, align 4
  br label %4

25:                                               ; preds = %4
  ret void
}

declare dso_local i32 @ListView_GetItemCount(i32) #1

declare dso_local i32 @memset(%struct.TYPE_4__*, i32, i32) #1

declare dso_local i32 @ListView_GetItem(i32, %struct.TYPE_4__*) #1

declare dso_local i32 @HeapFree(i32, i32, i64) #1

declare dso_local i32 @GetProcessHeap(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
